--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js",
-    "build": "npm install"
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
