--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js",
-    "build": "npm"
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
