--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,7 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
-src/components/config.js
+# src/components/config.js
 
 # Editor directories and files
 .vscode/*
